fix video overflow

--- a/src/components/CampaignsList.module.css
+++ b/src/components/CampaignsList.module.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  background: white;
 }
 
 @media (max-width: 767px) {
